list teams with counters
